# wagtail-seo

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
docs/: conf.py  contributing.rst  customize-editor.rst  customize-meta.rst  index.rst  install.rst  releases.rst  test-meta.rst
docs/_static/: custom.css
docs/_templates/: sponsor.html
docs/customizing/: customize-editor.rst  customize-meta.rst  django-settings.rst  index.rst  use-on-snippet.rst
docs/getting-started/: edit-meta.rst  index.rst  install.rst  migration-3.rst
docs/reference/: blocks.rst  index.rst  models.rst  utils.rst
scripts/: run_tests.sh
testproject/home/: apps.py  models.py  tests.py  views.py
testproject/home/migrations/: 0001_initial.py  0002_auto_20210121_1012.py  0002_auto_20210731_1335.py  0003_alter_articlepage_struct_org_actions_and_more.py  0003_auto_20210121_1241.py  0003_auto_20211227_1028.py  0003_auto_20211227_1315.py  0004_alter_articlepage_struct_org_logo_and_more.py  0004_auto_20210125_1602.py  0004_auto_20211227_1302.py  0005_auto_20210128_1133.py  0005_badwolf_mysnippet.py  0005_remove_articlepage_struct_org_actions_and_more.py  0006_alter_articlepage_og_image_alter_seopage_og_image.py  0006_alter_badwolf_struct_org_actions_and_more.py  0006_auto_20210128_1346.py  0007_merge_0002_auto_20210731_1335_0006_auto_20210128_1346.py  0008_merge_20211227_1423.py
testproject/testproject/: settings.py  urls.py
wagtailseo/: __init__.py  amp.py  apps.py  blocks.py  icon.py  models.py  schema.py  settings.py  utils.py  wagtail_hooks.py
wagtailseo/migrations/: 0001_initial.py  0002_remove_seosettings_amp_pages.py  0002_seosettings_action_blocks.py  0003_auto_20210121_1021.py  0003_auto_20211227_1308.py  0003_seosettings_struct_org_fields.py  0004_auto_20210121_1241.py  0004_seosettings_og_image_default.py  0005_auto_20210125_1602.py  0006_merge_20211227_0927.py  0007_merge_20211227_1423.py  0008_alter_seosettings_action_blocks.py
wagtailseo/templates/wagtailseo/: article.amp.html  base.amp.html  meta.html  (+3 more)
wagtailseo/templatetags/: wagtailseo_tags.py
(+1 files in other folders)
