# -- PACKAGE INFO ---------------------

[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "CodeRed LLC", email = "info@coderedcorp.com"}
]
classifiers = [
    "Framework :: Django",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "wagtail>=4.0,<8.0",
]
description = "Search engine and social media optimization for Wagtail."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "wagtail-seo"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/coderedcorp/wagtail-seo"
Documentation = "https://docs.coderedcorp.com/wagtail-seo/"
Changelog = "https://docs.coderedcorp.com/wagtail-seo/releases.html"

[tool.setuptools]
packages = ["wagtailseo"]

[tool.setuptools.dynamic]
version = {attr = "wagtailseo.__version__"}


# -- TOOLS ----------------------------

[tool.codespell]
skip = ".venv,venv,htmlcov,build,_build,dist,migrations,*.json"

[tool.django-stubs]
django_settings_module = "testproject.settings"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = [
    '^\..*',
    'migrations',
    'node_modules',
    'venv',
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproject.settings"
junit_family = "xunit2"
addopts = "--cov wagtailseo --cov-report html --cov-report xml --junitxml junit/test-results.xml"
python_files = "tests.py test_*.py"

[tool.ruff]
extend-exclude = ["build", "migrations"]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2
